# Asuka

./: .env.example  .gitignore  AGENTS.md  README.md  opencode.jsonc  pyproject.toml  产品定位.md
asuka/: __init__.py  config.py  main.py
asuka/api/: __init__.py
asuka/core/: __init__.py
asuka/core/voice/: asr.py  (+6 more)
asuka/routes/: __init__.py  chat.py  realtime.py  tts.py  wiki.py  ws.py
asukabot/: __init__.py  config.py  main.py
asukabot/routes/: chat.py  tts.py  wiki.py  ws.py
doc/: 概要设计.md
docs/: airi_live2d_expression_motion_research.md  codex_context_compaction_troubleshooting.md  handoff_019e8caf_language_teaching.md  live2d_expression_motion_design.md  live2d表情功能调试记录.md  phase2设计.md  phase3设计.md  产品定位.md  前端设计.md  实现计划.md  开发启动指南.md  概要设计.md  详细设计.md  项目阶段性总结PPT设计文档.md
docs/apiref/: 火山引擎流式语音合成v3.md
docs/edu/: 语言教学功能开发计划书.md  语言教学功能详细设计书.md  语言教学浏览器测试计划.md  语言教学设计.md
docs/live2d/: airi_live2d_expression_motion_research.md  live2d_expression_motion_design.md  live2d_motion_plugin_chain设计.md  live2d表情功能调试记录.md
docs/todo/: 未完成功能.md
docs/voice/: 实时语音链路设计.md
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
scripts/: run_wiki_demo.py
tests/: conftest.py
tests/test_agent/: test_presets.py
tests/test_graph/: test_dispatch.py
tests/test_routes/: test_live2d_tag_extractor.py  test_realtime.py  test_tts.py  test_wiki.py  test_ws_language.py  test_ws_tool_call.py
tests/test_tools/: test_language.py  test_registry.py
(+72 files in other folders)
